--- a/index.html
+++ b/index.html
@@ -1,70 +1,168 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<title>Juan Pedro Vallejo</title>
+
+<style>
+body {
+  margin: 0;
+  font-family: Helvetica, sans-serif;
+  overflow: hidden;
+}
+
+/* ─── MENU ───────────────────────────── */
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  background: white;
+  z-index: 10;
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+/* ─── CONTENEDOR PRINCIPAL ───────────── */
+#wrapper {
+  transition: transform 0.9s ease;
+  will-change: transform;
+}
+
+/* ─── SECCIONES ──────────────────────── */
+.section {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  text-align: center;
+}
+
+#init { background: #e3e3ff; }
+#art  { background: #e3ffe3; }
+#who  { background: #ffe3e3; }
+
+/* ─── P5 ─────────────────────────────── */
+#p5-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+</style>
+</head>
+
+<body>
+
+<nav>
+  <a onclick="goTo(0)">INIT</a>
+  <a onclick="goTo(1)">ART</a>
+  <a onclick="goTo(2)">WHO</a>
+</nav>
+
+<div id="wrapper">
+
+  <!-- ─── INIT (p5) ─────────────────── -->
+  <div class="section" id="init">
+    <div id="p5-container"></div>
+  </div>
+
+  <!-- ─── ART ───────────────────────── -->
+  <div class="section" id="art">
+    ART
+  </div>
+
+  <!-- ─── WHO ───────────────────────── -->
+  <div class="section" id="who">
+    <div>
+      JUAN PEDRO VALLEJO<br>
+      1993. ARGENTINA
+    </div>
+  </div>
+
+</div>
+
+<!-- ─── LIBS ─────────────────────────── -->
+<script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.min.js"></script>
+<script src="Random.js"></script>
+<script src="sketch.js"></script>
+
+<!-- ─── SCROLL SYSTEM ────────────────── -->
 <script>
-let current = 0;
-let isMoving = false;
+document.addEventListener("DOMContentLoaded", () => {
 
-function apply() {
+  let current = 0;
+  let isMoving = false;
+
   const w = document.getElementById("wrapper");
-  w.style.transform = `translateY(${-current * window.innerHeight}px)`;
-}
 
-function goTo(i) {
-  current = Math.max(0, Math.min(2, i));
-  apply();
-}
+  function apply() {
+    w.style.transform = `translateY(${-current * window.innerHeight}px)`;
+  }
 
-// ===== DESKTOP / TRACKPAD =====
-// UN SOLO EVENTO = UN SOLO SALTO
+  window.goTo = function(i) {
+    current = Math.max(0, Math.min(2, i));
+    apply();
+  }
 
-window.addEventListener("wheel", e => {
-  e.preventDefault();        // clave para trackpads con inercia
-  if (isMoving) return;
+  // ─── DESKTOP ────────────────────────
+  window.addEventListener("wheel", e => {
+    e.preventDefault();
+    if (isMoving) return;
 
-  isMoving = true;
+    isMoving = true;
 
-  if (e.deltaY > 0) current += 1;
-  if (e.deltaY < 0) current -= 1;
+    if (e.deltaY > 0) current += 1;
+    if (e.deltaY < 0) current -= 1;
 
-  current = Math.max(0, Math.min(2, current));
+    current = Math.max(0, Math.min(2, current));
 
-  apply();
+    apply();
 
-  setTimeout(() => {
-    isMoving = false;
-  }, 900);
-}, { passive: false });
+    setTimeout(() => isMoving = false, 900);
+  }, { passive: false });
 
 
-// ===== MOBILE =====
-// CUALQUIER SWIPE = 1 SALTO
+  // ─── MOBILE ─────────────────────────
+  let startY = 0;
 
-let startY = 0;
+  window.addEventListener("touchstart", e => {
+    startY = e.touches[0].clientY;
+  });
 
-window.addEventListener("touchstart", e => {
-  startY = e.touches[0].clientY;
+  window.addEventListener("touchend", e => {
+    if (isMoving) return;
+
+    let endY = e.changedTouches[0].clientY;
+    let delta = endY - startY;
+
+    // gesto mínimo
+    if (Math.abs(delta) < 10) return;
+
+    isMoving = true;
+
+    if (delta < 0) current += 1;
+    else current -= 1;
+
+    current = Math.max(0, Math.min(2, current));
+
+    apply();
+
+    setTimeout(() => isMoving = false, 900);
+  });
+
+  window.addEventListener("resize", apply);
+
 });
-
-window.addEventListener("touchend", e => {
-  if (isMoving) return;
-
-  let endY = e.changedTouches[0].clientY;
-  let delta = endY - startY;
-
-  // si casi no hubo movimiento, no hacemos nada
-  if (Math.abs(delta) < 10) return;
-
-  isMoving = true;
-
-  if (delta < 0) current += 1;
-  else current -= 1;
-
-  current = Math.max(0, Math.min(2, current));
-
-  apply();
-
-  setTimeout(() => {
-    isMoving = false;
-  }, 900);
-});
-
-window.addEventListener("resize", apply);
 </script>
+
+</body>
+</html>
