--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@ button {
 <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.min.js"></script>
 <script src="Random.js"></script>
 <script src="sketch.js"></script>
+  <script src="modulor.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.0.8/dist/tweakpane.min.js"></script>
 
 <script>
